--- a/学习/11.25 html+css/自己的网页牛逼吊炸天.html
+++ b/学习/11.25 html+css/自己的网页牛逼吊炸天.html
@@ -22,10 +22,13 @@
   .search{
     width: 900px;
   }
-  .zong{
-    width: 100%;
-    height: 200%;
+  iframe{
+    width: 80%;
+    height: 500px;
+    float: left;
+    border: 1px solid #333;
     float: right;
+    padding :20px;
   }
   .r1{
     float: left;
@@ -81,22 +84,10 @@
       <input  name="search" type="text" />
       <input type="submit" value="提交" />
     </div>
-    <div class="zong">
-      <iframe src="" name="mypage"></iframe>
-    </div>
-    <div class="r1">
-      <div class="a4">
-        <a href="http://www.bilibili.com/video/av7240805/?tg" target="mypage">b站</a>
-      </div>
-      <div class="a1">
-        <a href="http://www.bilibili.com/video/av7240805/?tg" target="mypage">b站</a>
-      </div>
-      <div class="a2">
-        <a href="http://www.bilibili.com/video/av7240805/?tg" target="mypage">b站</a>
-      </div>
-      <div class="a3">
-        <a href="http://www.bilibili.com/video/av7240805/?tg" target="mypage">b站</a>
-      </div>
-    </div>
+      <iframe src="http://www.baidu.com" name="mypage"></iframe>
+        <p><a href="http://www.bilibili.com/video/av7240805/?tg" target="mypage">b站</a></p>
+        <p><a href="http://www.bilibili.com/video/av7240805/?tg" target="mypage">b站</a></p>
+        <p><a href="http://www.bilibili.com/video/av7240805/?tg" target="mypage">b站</a></p>
+        <p><a href="http://www.bilibili.com/video/av7240805/?tg" target="mypage">b站</a></p>
   </body>
 </thml>
