--- a/学习/11.27/css3常用选择器.html
+++ b/学习/11.27/css3常用选择器.html
@@ -10,6 +10,12 @@
     .a1 p:last-of-type{
       font-size:60px;
     }
+    .a1> p:nth-child(2){
+      font-size: 180px;
+    }
+    .a1>p:nth-of-type(2){
+      color: red;
+    }
     </style>
   </head>
   <body>
