--- a/学习/12.1/任务10/新建文件夹/任务1.html
+++ b/学习/12.1/任务10/新建文件夹/任务1.html
@@ -26,6 +26,11 @@
     </div>
     <div id="footer">
       <div class="foot1">
+        <ul>
+          <li>饥人谷</li>
+          <li>JSCODE</li>
+          <li>JSBIN</li>
+        </ul>
       </div>
     </div>
   </body>
