--- a/学习/12.1/任务10/任务题二/任务二.html
+++ b/学习/12.1/任务10/任务题二/任务二.html
@@ -14,10 +14,15 @@
       <div class="a3 box">
       </div>
     </div>
-    <div class="sb">
-      <div class="smallbox1 sb"></div>
-      <div class="smallbox2 sb"></div>
-      <div class="smallbox3 sb"></div>
-    </div>
+      <div class="smallbox1"></div>
+      <div class="smallbox2"></div>
+      <div class="smallbox3"></div>
+    <div class="haha">
+      <div class="b1 haha">
+      </div>
+      <div class="b2 haha">
+      </div>
+      <div class="b3 haha">
+      </div>
   </body>
 </html>
