--- a/学习/12.2/span实验.html
+++ b/学习/12.2/span实验.html
@@ -4,17 +4,26 @@
     <meta charset="utf-8">
     <title></title>
     <style>
-    .a1{
+    .a1 a{
       color: red;
+    }
+    .a2 a{
+      color: blue;
     }
     </style>
   </head>
   <body>
     <span class="a1">
-      <p>dfdsfdsfdsfds</p>
-      <p>dfdsfdsfdsfds</p>
-      <p>dfdsfdsfdsfds</p>
-      <p>dfdsfdsfdsfds</p>
+      <a href="#">dfdsfdsfdsfds</a>
+      <a href="#">dfdsfdsfdsfds</a>
+      <a href="#">dfdsfdsfdsfds</a>
+      <a href="#">dfdsfdsfdsfds</a>
+    </span>
+    <span class="a2">
+      <a href="#">dfd个非官方个dsfds</a>
+      <a href="#">dfd个人风格风格fds</a>
+      <a href="#">dfd豆腐干豆腐s</a>
+      <a href="#">d梵蒂冈梵蒂冈地方s</a>
     </span>
   </body>
 </html>
