--- a/学习/12.7/页面大作业.html
+++ b/学习/12.7/页面大作业.html
@@ -8,7 +8,7 @@
     <div id="first">
       <h1>钢铁侠</h1>
       <p>改编自“漫威漫画”中的经典故事</p>
-      <a href="http://baike.baidu.com/link?url=C40V4hnn2RX_6-e-trdrwxO2Zdh3FB7QrN28Re434nETKKJ3bsqdgch0kMW6IcmI-s84TWz5VyT55LyrgEAmWorL5meI1uSbBYS1lpH-a_y" class="link">查看更多</a>
+      <a href="http://baike.baidu.com/link?url=C40V4hnn2RX_6-e-trdrwxO2Zdh3FB7QrN28Re434nETKKJ3bsqdgch0kMW6IcmI-s84TWz5VyT55LyrgEAmWorL5meI1uSbBYS1lpH-a_y" target="_blank" class="link">查看更多</a>
     </div>
     <div id="second">
       <div class="blank">
@@ -18,6 +18,35 @@
 
     </div>
     <div id="third">
+      <h1>技能</h1>
+      <div class="module1">
+        <i class="iconfont2">&#xe710;</i>
+        <h6>HTML & CSS</h6>
+        <p>html css相关技能，比如...</p>
+        <a href="#">相关作品</a>
+      </div>
+
+      <div class="module1">
+        <i class="iconfont2">&#xe60e;</i>
+        <h6>JS & Jquery</h6>
+        <p>JS组件，插件，比如...</p>
+        <a href="#">相关作品</a>
+      </div>
+
+      <div class="module1">
+        <i class="iconfont2">&#xe629;</i>
+        <h6>项目</h6>
+        <p>XXX,XXX,XXX</p>
+        <a href="#">我的项目</a>
+      </div>
+
+      <div class="module1">
+        <i class="iconfont2">&#xe608;</i>
+        <h6>个人博客</h6>
+        <p>学习历程总结，比如，做了什么事</p>
+        <a href="#">查看博客</a>
+      </div>
+
     </div>
     <div id="forth">
       <h1>又是一段话</h1>
@@ -25,13 +54,35 @@
     <div id="fifth">
       <h1>我的作品</h1>
       <ul>
-        <li><img src="sm1.jpg" alt="无法加载"></li>
-        <li><img src="sm2.jpg" alt="无法加载"></li>
-        <li><img src="sm3.jpg" alt="无法加载"></li>
-        <li><img src="sm4.jpg" alt="无法加载"></li>
+        <li><a href="#"><img src="sm1.jpg" alt="无法加载"></a></li>
+        <li><a href="#"><img src="sm2.jpg" alt="无法加载"></a></li>
+        <li><a href="#"><img src="sm3.jpg" alt="无法加载"></a></li>
+        <li><a href="#"><img src="sm4.jpg" alt="无法加载"></a></li>
       </ul>
+      <a href="#">更多作品</a>
     </div>
     <div id="sixth">
+        <p>我是一个聪明勤奋的人。</p>
+        <a href="#" class="link1">Click Me</a>
+        <a href="#" class="link2">Look At Me</a>
+    </div>
+    <div id="seventh">
+      <ul class="both end1">
+        <li><h5>我的信息</h5></li>
+        <li><p>3481 Melrose Place</p></li>
+        <li><p>Beverly Hills,CA 90210</p></li>
+      <ul class="both end2">
+        <li><i class="iconfont1">&#xe60c;</i>
+        <span>(123)456-7890</span></li>
+        <li><i class="iconfont1">&#xe66d;</i>
+        <a href="#">name@example.com</a></li>
+        <div class="tubiao">
+        <i class="iconfont3">&#xe60f;</i>
+        <i class="iconfont3">&#xe645;</i>
+        <i class="iconfont3">&#xe600;</i>
+      </div>
+      <h3>copyright hunger 2016</h3>
+      </div>
     </div>
   </body>
 </html>
