--- a/学习/12.14/函数演示.html
+++ b/学习/12.14/函数演示.html
@@ -86,20 +86,28 @@
       // })(1000)
       //
       //
-      var authorName="山边小溪";
-      function doSomething(){
-          var blogName="梦想天空";
-          function innerSay(){
-              alert(blogName);
-          }
-          innerSay();
-      }
-      doSomething();
+      // var authorName="山边小溪";
+      // function doSomething(){
+      //     var blogName="梦想天空";
+      //     function innerSay(){
+      //         alert(blogName);
+      //     }
+      //     innerSay();
+      // }
+      // doSomething();
       // alert(authorName); //山边小溪
       // alert(blogName); //脚本错误
       // doSomething(); //梦想天空
       // innerSay() //脚本错误
       //
+
+      var v=10000;
+      function f(){
+        var v=2;
+        console.log(v);
+      }
+      // f();
+      console.log(v);
     </script>
   </body>
 </html>
