--- a/学习/12.15/任务17-2.html
+++ b/学习/12.15/任务17-2.html
@@ -57,38 +57,89 @@
 // }
 // fn = 1;
 // console.log(fn(fn));
-fn();
- var i = 10;
- var fn = 20;
- console.log(i);
- function fn(){
-     console.log(i);
-     var i = 99;
-     fn2();
-     console.log(i);
-     function fn2(){
-         i = 100;
-     }
- }
+// fn();
+//  var i = 10;
+//  var fn = 20;
+//  console.log(i);
+//  function fn(){
+//      console.log(i);
+//      var i = 99;
+//      fn2();
+//      console.log(i);
+//      function fn2(){
+//          i = 100;
+//      }
+//  }
+//
+//
+//  var i;
+//  var fn;
+//  function fn(){
+//     var i;
+//     function fn2(){
+//         i = 100;
+//     }
+//      console.log(i);  //undefined;
+//      i = 99;
+//      fn2();
+//      console.log(i); //99;   ?
+//    }
+//   i = 10;
+//   fn = 20;
+//   console.log(i); //10;
+// fn();
+// var i = 10;
+// var fn = 20;
+// console.log(i);
+// function fn(){
+//     console.log(i);
+//     var i = 99;
+//     fn2();
+//     console.log(i);
+//     function fn2(){
+//         i = 100;
+//     }
+// }
+//
+
+    // var i;
+    // var fn;
+    // function fn(){
+    //     var i
+    //     function fn2(){
+    //         i = 100;
+    //     }
+    //     console.log(i);
+    //     i = 99;
+    //     fn2();
+    //     console.log(i);
+    // }
+    // fn();
+    // i = 10;
+    // fn = 20;
+    // console.log(i);
 
 
- var i;
- var fn;
- function fn(){
-    var i;
-    function fn2(){
-        i = 100;
-    }
-     console.log(i);  //undefined;
-     i = 99;
-     fn2();
-     console.log(i); //99;   ?
-   }
-  i = 10;
-  fn = 20;
-  console.log(i); //10;
 
+        // var i = 3000;
+        // function fn2(){
+        //     i = 100;
+        //     console.log(i);
+        // }
+        // fn2();
+        // console.log(i);
+        // i = 99;
+        // console.log(i);
 
+        var p = 2;
+
+        function f() {
+          p = 3;
+          console.log(p)
+        }
+        f();
+        console.log(p)
+        p // 2
     </script>
   </body>
 </html>
