--- a/学习/12.15/任务17.html
+++ b/学习/12.15/任务17.html
@@ -125,29 +125,29 @@
 // console.log(i);
 // console.log(j);
 //
-// var i;
-// var j;
-// console.log(j);
-// console.log(i);
-// for(var i=0; i<10; i++){
-//     var j = 100;
-// }
-// console.log(i);
-// console.log(j);
+var i;
+var j;
+console.log(j);
+console.log(i);
+for(var i=0; i<10; i++){
+    var j = 100;
+}
+console.log(i);
+console.log(j);
 
-// fn();
-// var i = 10;
-// var fn = 20;
-// console.log(i);
-// function fn(){
-//     console.log(i);
-//     var i = 99;
-//     fn2();
-//     console.log(i);
-//     function fn2(){
-//         i = 100;
-//     }
-// }
+fn();
+var i = 10;
+var fn = 20;
+console.log(i);
+function fn(){
+    console.log(i);
+    var i = 99;
+    fn2();
+    console.log(i);
+    function fn2(){
+        i = 100;
+    }
+}
 
     </script>
   </body>
