--- a/学习/12.15/任务17-2.html
+++ b/学习/12.15/任务17-2.html
@@ -57,37 +57,43 @@
 // }
 // fn = 1;
 // console.log(fn(fn));
-fn();
- var i = 10;
- var fn = 20;
- console.log(i);
- function fn(){
-     console.log(i);
-     var i = 99;
-     fn2();
-     console.log(i);
-     function fn2(){
-         i = 100;
-     }
- }
-
-
- var i;
- var fn;
- function fn(){
-    var i;
-    function fn2(){
-        i = 100;
-    }
-     console.log(i);  //undefined;
-     i = 99;
-     fn2();
-     console.log(i); //99;   ?
-   }
-  i = 10;
-  fn = 20;
-  console.log(i); //10;
-
+// fn();
+//  var i = 10;
+//  var fn = 20;
+//  console.log(i);
+//  function fn(){
+//      console.log(i);
+//      var i = 99;
+//      fn2();
+//      console.log(i);
+//      function fn2(){
+//          i = 100;
+//      }
+//  }
+//
+//
+//  var i;
+//  var fn;
+//  function fn(){
+//     var i;
+//     function fn2(){
+//         i = 100;
+//     }
+//      console.log(i);  //undefined;
+//      i = 99;
+//      fn2();
+//      console.log(i); //99;   ?
+//    }
+//   i = 10;
+//   fn = 20;
+//   console.log(i); //10;
+  var say = 0;
+  (function say(n){
+      console.log(n);
+      if(n<3) return;
+      say(n-1);
+  }( 10 ));
+  console.log(say);
 
     </script>
   </body>
