--- a/学习/12.17/任务18.html
+++ b/学习/12.17/任务18.html
@@ -5,26 +5,121 @@
   </head>
   <body>
     <script>
-      var prod = {
-          name: '女装',
-          styles: ['短款', '冬季', '春装']
-        };
-        console.log('13')
-      function getTpl(data){
-        var h1='<dl class="product">';
-        h1+= '\n\t<dt>'+prod.name+'</dt>';
-        for( var i=0; i<prod.styles.length; i++){
-          h1+='\n\t<dd>'+ prod.styles[i] +'</dd>';
+    //   var prod = {
+    //       name: '女装',
+    //       styles: ['短款', '冬季', '春装']
+    //     };
+    //     console.log('13')
+    //   function getTpl(data){
+    //     var h1='<dl class="product">';
+    //     h1+= '\n\t<dt>'+prod.name+'</dt>';
+    //     for( var i=0; i<prod.styles.length; i++){
+    //       h1+='\n\t<dd>'+ prod.styles[i] +'</dd>';
+    //
+    //     }
+    //     h1+='\n</dl>'
+    //   return h1;
+    // };
+    // console.log(getTpl())
 
-        }
-        h1+='\n</dl>'
-      return h1;
-    };
-    console.log(getTpl())
-        /*function getTpl(data){
-        //todo...
-        };
-        var result = getTplStr(prod);  //result为下面的字符串*/
+    // function find(arr,tar){
+    //   for(var i=0; i<arr.length; i++){
+    //     if(arr[i]===tar){
+    //       return i;
+    //     }
+    //   }
+    //   return -1;
+    // }
+    // arr = ["a", "b", 1, 3, 5, "b", 2];
+    // function filterNumeric(arr){
+    //   var newarr=[];
+    //   for(var i=0; i<arr.length; i++){
+    //     if(typeof arr[i] === "number"){
+    //       newarr.push(arr[i])
+    //       }
+    //     }
+    //     return newarr;
+    // }
+    // newarr=filterNumeric(arr);
+//
+//     var obj = {
+//       className: 'open menu '
+//     }
+//     obj.className.split(" ");
+//
+//     function addclass(obj,st){
+//       var st="new";
+//
+//     }
+// addclass();
+// camelize("background-color")
+// camelize("list-style-image")
+// function camelize(str){
+//   var aaa=str.split('-');
+//   for(i=0;i<aaa.length;i++){
+//     aaa[i]=aaa[i].charAt(0).toUpperCase()+aaa[i].slice(1);
+//   }
+//   return aaa.join('');
+// }
+// function isPalindrome(data){
+//   var string=data.split('').reverse();
+//   var aa=data.split('').join(' ')
+//   var bb=string.join(' ')
+//   if(aa===bb){
+//     console.log('ture')
+//   }else
+//   {
+//   console.log('false')
+//   }
+// }
+// isPalindrome('abccba')
+
+
+// function isPalindrome(data){
+//   var array=data.split('');
+//   console.log(array)
+//   for(var i=1; i<array.length; i++){
+//     if(array[i-1]!==array[array.length-i]){
+//       console.log('false') ;
+//       break;
+//     }
+//     console.log('true') ;
+//       break;
+//   }
+// }
+// isPalindrome('abcdfgsgasfrtjycba');
+// var john = { name: "John Smith", age: 23 }
+// var mary = { name: "Mary Key", age: 18 }
+// var bob = { name: "Bob-small", age: 6 }
+// var people = [ john, mary, bob ]
+// console.log(john.age)
+// function agesort(data){
+//
+// }
+// ageSort(people) // [ bob, mary, john ]
+
+function ucFirst(data){
+  
+}
+ucFirst('happy')
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </script>
   </body>
 </html>
