--- a/学习/12.20/任务.html
+++ b/学习/12.20/任务.html
@@ -28,28 +28,38 @@
     // //
 
     // 代码二：
-  //   function getChsDate(data){
-  //     var array=data.split('-');
-  //     console.log(array)
-  //     var year='';
-  //     var hanzi=['零','一','二','三','四','五','六','七','八','九'];
-  //     for(var i=0; i<4; i++){
-  //       year+=hanzi[array[0][i]];
-  //     }
-  //   function m_d(data){
-  //     if (data.length===1){
-  //       data="0"+data;
-  //     }
-  //     if(data[0]==="0"){
-  //       return hanzi[data[1]];
-  //     }else{
-  //       return "十"+hanzi[data[1]];
-  //     }
-  //   }
-  //   return year+"年"+m_d(array[1])+"月"+m_d(array[2])+"日";
-  // }
-  //   var str = getChsDate('2016-4-18');
-  //   console.log(str);  // 二零一五年一月八日
+    function getChsDate(data){
+      var array=data.split('-');
+      var year='';
+      var hanzi=['零','一','二','三','四','五','六','七','八','九'];
+      for(var i=0; i<4; i++){
+        year+=hanzi[array[0][i]];
+      }
+    function m_d(data){
+      if (data.length===1){
+        data="0"+data;
+      }
+      if(data[0]==="0"){
+        return hanzi[data[1]];
+      }
+      if(data[0]==="1"){
+        return "十"+hanzi[data[1]];
+      }
+      if(data[0]==="2"){
+        return "二十"+hanzi[data[1]];
+      }
+      if(data[0]==="3"){
+        if(data[1]==="0"){
+          return"三十";
+        }else{
+          return "三十"+hanzi[data[1]];
+        }
+      }
+    }
+    return year+"年"+m_d(array[1])+"月"+m_d(array[2])+"日";
+  }
+    var str = getChsDate('1996-04-25');
+    console.log(str);  // 二零一五年一月八日
 
     // 代码三：
 
