--- a/学习/12.20/任务.html
+++ b/学习/12.20/任务.html
@@ -28,49 +28,57 @@
     // //
 
     // 代码二：
-    function getChsDate(data){
-      var array=data.split('-');
-      var year='';
-      var hanzi=['零','一','二','三','四','五','六','七','八','九'];
-      for(var i=0; i<4; i++){
-        year+=hanzi[array[0][i]];
-      }
-    function m_d(data){
-      if (data.length===1){
-        data="0"+data;
-      }
-      if(data[0]==="0"){
-        return hanzi[data[1]];
-      }
-      if(data[0]==="1"){
-        return "十"+hanzi[data[1]];
-      }
-      if(data[0]==="2"){
-        return "二十"+hanzi[data[1]];
-      }
-      if(data[0]==="3"){
-        if(data[1]==="0"){
-          return"三十";
-        }else{
-          return "三十"+hanzi[data[1]];
-        }
-      }
-    }
-    return year+"年"+m_d(array[1])+"月"+m_d(array[2])+"日";
-  }
-    var str = getChsDate('1996-04-25');
-    console.log(str);  // 二零一五年一月八日
+  //   function getChsDate(data){
+  //     var array=data.split('-');
+  //     var year='';
+  //     var hanzi=['零','一','二','三','四','五','六','七','八','九'];
+  //     for(var i=0; i<4; i++){
+  //       year+=hanzi[array[0][i]];
+  //     }
+  //   function m_d(data){
+  //     if (data.length===1){
+  //       data="0"+data;
+  //     }
+  //     if(data[0]==="0"){
+  //       return hanzi[data[1]];
+  //     }
+  //     if(data[0]==="1"){
+  //       return "十"+hanzi[data[1]];
+  //     }
+  //     if(data[0]==="2"){
+  //       return "二十"+hanzi[data[1]];
+  //     }
+  //     if(data[0]==="3"){
+  //       if(data[1]==="0"){
+  //         return"三十";
+  //       }else{
+  //         return "三十"+hanzi[data[1]];
+  //       }
+  //     }
+  //   }
+  //   return year+"年"+m_d(array[1])+"月"+m_d(array[2])+"日";
+  // }
+  //   var str = getChsDate('1996-04-25');
+  //   console.log(str);  // 二零一五年一月八日
 
     // 代码三：
 
 
-    function getLastNDays(data){
-      var time = Date.now();
-      var number = (time-data*24*60*60*1000);
-      var year = Math.floor(number/1000/60/60/24/365);
-      var month = Math.floor((number-year*1000*60*60*24*365)/1000/60/60/24/30);
-      var day = Math.floor()
-    }
+    // function getLastNDays(data){
+    //   var time = Date.now();
+    //   var number = (time-data*24*60*60*1000);
+    //   var year = Math.floor(number/1000/60/60/24/365)+1970;
+    //   var month = Math.floor((number-(year-1970)*1000*60*60*24*365)/1000/60/60/24/30);
+    //   var day = Math.floor((number-(year-1970)*1000*60*60*24*365-month*1000*60*60*24*30)/1000/60/60/24);
+    //   return year + "-" + month + "-" + day;
+    // }
+    //
+    //
+    // function getLastNDays(data){
+    //   var time1 = Date.now()-data*24*60*60*1000;
+    //   var time2 = new Date(time1);
+    //   return time2.getFullYear() + '-' + (time2.getMonth()+1) + '-' + time2.getDate()
+    // }
     // var lastWeek =  getLastNDays(7); // ‘2016-01-08’
     // var lastMonth = getLastNDays(30); //'2015-12-15'
 
@@ -80,6 +88,7 @@
     //     //code here ...
     //     var obj = {
     //         start: function(){
+    //           new Date()
     //               //code here ...， 当前时间
     //         },
     //         end: function(){
@@ -96,6 +105,14 @@
     // Runtime.end();
     // console.log(  Runtime.get() );
 
+    // function recursion(){
+    // for(var i=0; i<21; i++){
+    //   console.log(i);
+    // }
+    for(var i=0; i<20; i++){
+      console.log(i+1);
+    }
+    // }
 
 
 
