--- a/学习/12.22/text.html
+++ b/学习/12.22/text.html
@@ -5,15 +5,15 @@
   // function stop(){
   //   clearTimeout(a);
   // }
-  var i=1;
-  function ha(){
-    b = setInterval(function(){
-     console.log(i++);
-   }, 1000);
-   }
-  function stop(){
-    clearInterval(b);
-  };
+  // var i=1;
+  // function ha(){
+  //   b = setInterval(function(){
+  //    console.log(i++);
+  //  }, 1000);
+  //  }
+  // function stop(){
+  //   clearInterval(b);
+  // };
   // var i = 1;
   //     function circle(){
   //       c = setTimeout(function(){
@@ -24,4 +24,60 @@
   //       function stop(){
   //         clearTimeout(c)
   //       }
+  // function usetime(){
+  //   for (var i=0; i<1000; i++){
+  //     console.log('');
+  //   }
+  // }
+  // var i=0;
+  // function tio(){
+  //   a = setTimeout(function(){
+  //     console.log(i++);
+  //     usetime();
+  //     tio();
+  //   },1000)
+  // }
+  // var j = 0;
+  // b = setInterval(function(){
+  //   usetime();
+  //   console.log(j++);
+  // },1000)
+  // function stop(){
+  //   clearTimeout(a);
+  //   clearInterval(b);
+  // }
+
+
+  // var a=4;
+  // setTimeout(function(){
+  //   console.log("before",a);
+  //   a = 100;
+  //   console.log("after",a)
+  // },0);
+  // a=200;
+  // console.log(a);
+  //
+  // var a=4;
+  // a=200;
+  // console.log(a);
+  //
+  // setTimeout(function(){
+  //   console.log("before",a);
+  //   a = 100;
+  //   console.log("after",a)
+  // },0);
+function getmini(){
+  var i =0;
+  var start = Date.now();
+  var clock = setTimeout(function(){
+    i++;
+    if (i === 10000){
+      clearTimeout(clock);
+      var end = Date.now();
+      console.log((end-start)/i);
+    }
+    clock = setTimeout(arguments.callee,0)
+  },0)
+}
+
 </script>
