--- a/学习/12.21/任务题.html
+++ b/学习/12.21/任务题.html
@@ -19,4 +19,29 @@
 //     copy();
 //   },1000)
 // }
+// function fn(n){
+//   if(n===1){
+//     return 1;
+//   }
+//   if(n===2){
+//     return 2;
+//   }
+//   return fn(n-1)+fn(n-2);
+// }
+// console.log(fn(30));
+function fn(n){
+  if(n===1){
+    return 1;
+  }
+  return fn(n-1)-(fn(n-1)/2+1);
+
+}
+fn(3);
+
+
+
+
+
+
+
 </script>
