--- a/学习/12.30/任务题/任务题三.html
+++ b/学习/12.30/任务题/任务题三.html
@@ -4,11 +4,6 @@
     <meta charset="utf-8">
     <title>renwu3</title>
     <style>
-      /*.img-preview{
-        border:1px solid #ccc;
-        width: 400px;
-        height: 400px;
-      }*/
     </style>
   </head>
   <body>
@@ -19,25 +14,26 @@
     </ul>
     <div class="img-preview"></div>
     <script>
-    // var ct = document.querySelector(".ct"),
-    //     preview = document.querySelector(".img-preview");
+    var ct = document.querySelector(".ct"),
+        preview = document.querySelector(".img-preview");
 
-    // ct.addEventListener('mouseenter',function(e){
-    //   var dataImg = e.target.getAttribute('data-img');
-    //   console.log(e.target)
-    //   preview.innerHTML = "<img src='"+ dataImg +"'/>"
-    // });
-
-      var ct = document.querySelector(".ct"),
-          child = ct.querySelectorAll("li"),
-          preview = document.querySelector(".img-preview");
-      console.log(child)
-      for(i=0; i<child.length; i++){
-        child[i].addEventListener('mouseenter',function(){
-          var dataImg = this.getAttribute('data-img');
-          preview.innerHTML = "<img src='"+ dataImg +"'/>"
-        })
+    ct.addEventListener('mouseover',function(e){          //mouseover鼠标悬停，与mouseenter不同；Mouseover：不论鼠标指针穿过被选元素或其子元素，都会触发 mouseover 事件。Mouseenter：只有在鼠标指针穿过被选元素时，才会触发 mouseenter 事件。
+      var dataImg = e.target.getAttribute('data-img');
+      if (dataImg !== null){
+        preview.innerHTML = "<img src='"+ dataImg +"'/>";
       }
+    })
+
+      // var ct = document.querySelector(".ct"),
+      //     child = ct.querySelectorAll("li"),
+      //     preview = document.querySelector(".img-preview");
+      // console.log(child)
+      // for(i=0; i<child.length; i++){
+      //   child[i].addEventListener('mouseenter',function(){
+      //     var dataImg = this.getAttribute('data-img');
+      //     preview.innerHTML = "<img src='"+ dataImg +"'/>"
+      //   })
+      // }
     </script>
   </body>
 </html>
