--- a/学习/12.30/任务4.3.html
+++ b/学习/12.30/任务4.3.html
@@ -2,50 +2,69 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>renwu4</title>
     <style>
-      .a{
-        outline:1px solid #ccc;
-        display:inline-block;
-        width:250px;
-        height:30px;
-        float: left;
-        line-height:30px;
-        text-align: center;
-        cursor: pointer;
+    .header {
+      border: 1px solid #ccc;
+      width:900px;
+    }
+    .header * {
+      box-sizing: border-box;
+    }
+    .header ul,
+    .header li {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+    }
+    .header .tabs:after {
+      content: '';
+      height: 0;
+      display: table;
+      clear: both;
+    }
+    .header .tabs li {
+      float: left;
+      width: 300px;
+      height: 30px;
+      line-height: 30px;
+      text-align: center;
+      border-right: 1px solid #ccc;
+      border-bottom: 1px solid #ccc;
+      cursor: pointer;
+    }
+      .header .tabs li:last-child {
+        border-right: none;
       }
-      .changecolor{
-        background-color: #999;
-      }
-      .tab:after{
-        content:'';
-        display: block;
-        clear: both;
-      }
-      .box{
-        outline:1px solid #ccc;
-        width:750px;
-        height:200px;
-        position:absolute;
-        left:48px;
-        top:48px;
-      }
+    .tabs .active {
+      background-color: red;
+    }
+    .header .panel {
+      display: none;
+      height: 180px;
+      padding: 20px;
+    }
+    .header .active {
+      display: block;
+    }
     </style>
   </head>
   <body>
-    <ul class="tab">
-      <li class="a changecolor">tab1</li>
-      <li class="a">tab2</li>
-      <li class="a">tab3</li>
-    </ul>
-    <div class="box changecolor">内容一</div>
-    <div class="box">内容二</div>
-    <div class="box">内容三</div>
-
+    <div class="header">
+      <ul class="tabs">
+        <li class="active">tab1</li>
+        <li>tab2</li>
+        <li>tab3</li>
+      </ul>
+      <div class="panel active">内容一</div>
+      <div class="panel">内容二</div>
+      <div class="panel">内容三</div>
+    </div>
     <script>
     var Utils = {
 
         hasClass: function(ele, cls){
-            return !!ele.className.match(new RegExp('\\b'+cls+'\\b'));
+            return !!ele.className.match(new RegExp('\\b'+cls+'\\b'));  //!!将表达式转化为布尔值
         },
 
         addClass:function(ele, cls){
@@ -104,6 +123,17 @@
            Utils.addClass(panels[index], 'active');
        }
     });
+
+
+
+
+
+
+
+
+
+
+
     </script>
   </body>
 </html>
