--- a/学习/12.30/任务题/re任务四.2.html
+++ b/学习/12.30/任务题/re任务四.2.html
@@ -2,50 +2,69 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title></title>
     <style>
-      .a{
-        outline:1px solid #ccc;
-        display:inline-block;
-        width:250px;
-        height:30px;
-        float: left;
-        line-height:30px;
+      .all *{
+        box-sizing: border-box;
+      }
+      .all{
+        border:1px solid #ccc;
+        width:600px;
+      }
+      .all ul,
+      .all li {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+      }
+      .tabs li{
+        border-left: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
         text-align: center;
-        cursor: pointer;
+        float:left;
+        width:200px;
+        height:30px;
+        line-height: 30px;
+        cursor:pointer;
       }
-      .changecolor{
-        background-color: #999;
+      .tabs li:first-child{
+        border-left: none;
       }
-      .tab:after{
-        content:'';
+      .all:after{
+        content:"";
         display: block;
         clear: both;
       }
-      .box{
-        outline:1px solid #ccc;
-        width:750px;
-        height:200px;
-        position:absolute;
-        left:48px;
-        top:48px;
+      .all .panel{
+        display: none;
+        height:250px;
+      }
+      .all .active{
+        display: block;
+
+      }
+      .all .tabs .active{
+        background-color: red;
       }
     </style>
   </head>
   <body>
-    <ul class="tab">
-      <li class="a changecolor">tab1</li>
-      <li class="a">tab2</li>
-      <li class="a">tab3</li>
-    </ul>
-    <div class="box changecolor">内容一</div>
-    <div class="box">内容二</div>
-    <div class="box">内容三</div>
+    <div class="all">
+      <ul class="tabs">
+        <li class="active">tab1</li>
+        <li>tab2</li>
+        <li>tab3</li>
+      </ul>
+        <div class="panel active">内容一</div>
+        <div class="panel">内容二</div>
+        <div class="panel">内容三</div>
+    </div>
 
     <script>
     var Utils = {
 
         hasClass: function(ele, cls){
-            return !!ele.className.match(new RegExp('\\b'+cls+'\\b'));
+            return !!ele.className.match(new RegExp('\\b'+cls+'\\b'));  //!!将表达式转化为布尔值
         },
 
         addClass:function(ele, cls){
@@ -88,7 +107,6 @@
     };
 
 
-
     var tabCt = document.querySelector('.tabs');
 
     tabCt.addEventListener('click', function(e){
@@ -99,11 +117,12 @@
 
        if(index > -1){
            Utils.removeClass(tabs, 'active');
-           Utils.addClass(target, 'active');
+           Utils.addClass(target, ' ');
            Utils.removeClass(panels, 'active');
            Utils.addClass(panels[index], 'active');
        }
     });
+
     </script>
   </body>
 </html>
