--- a/学习/1.11/任务题/任务二.html
+++ b/学习/1.11/任务题/任务二.html
@@ -2,9 +2,254 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>任务二</title>
+    <title>renwu2</title>
+    <style>
+    body,ul,li,a,div,img{
+      margin: 0;
+      padding: 0;
+    }
+      #modType #bar li{
+        border:1px solid #ccc;
+        display: inline-block;
+        cursor:pointer;
+      }
+      #modType #bar li.active{
+        background-color: #ccc;
+        color:white;
+      }
+
+      #modType .panel{
+        border:1px solid #ccc;
+        display: inline-block;
+        width:650px;
+        display: none;
+      }
+      #modType .panel:after{
+        display: block;
+        clear: both;
+        content: '';
+      }
+
+      #modType .panel>li{
+        border:1px solid #ccc;
+        display: inline-block;
+        width:200px;
+        text-align: center;
+        float: left;
+        margin:0 7px;
+      }
+      #modType .panel>li a{
+        text-decoration: none;
+        border: 1px solid red;
+        color:black;
+        padding:10px;
+        border-radius: 5px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        cursor: pointer;
+      }
+
+
+      #modType .panel>li .tabName{
+        font-family:'微软雅黑';
+        font-size: 14px;
+      }
+      #modType .panel>li .tabPrice{
+        font-size: 12px;
+        color: red;
+        font-weight: bold;
+      }
+      /*#modType .panel>li .cover{
+        background-color: #ccc;
+        display: inline-block;
+        text-align: center;
+        line-height: 200px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        opacity:0;
+      }*/
+      #modType .panel.active{
+        display: block;
+      }
+    </style>
   </head>
   <body>
-    
+    <div id="modType">
+      <div id="bar">
+        <ul>
+          <li>热门</li>
+          <li>珠宝首饰</li>
+          <li>奢侈品</li>
+        </ul>
+      </div>
+      <div class="kuang">
+        <ul class="panel">
+          <li>
+            <img src="http://jscode.me/uploads/profile/726-profileimg.jpg" alt="">
+            <div class="tabName">奢华洛世奇水晶</div>
+            <div class="tabPrice">￥460.00</div>
+            <div class="cover">
+              <a class='btn' href="#">立即抢购</a>
+            </div>
+          </li>
+          <li>
+            <img src="http://jscode.me/uploads/profile/726-profileimg.jpg" alt="">
+            <div class="tabName">奢华洛世奇水晶</div>
+            <div class="tabPrice">￥460.00</div>
+            <div class="cover">
+              <a href="#">立即抢购</a>
+            </div>
+          </li>
+          <li>
+            <img src="http://jscode.me/uploads/profile/726-profileimg.jpg" alt="">
+            <div class="tabName">奢华洛世奇水晶</div>
+            <div class="tabPrice">￥460.00</div>
+            <div class="cover">
+              <a href="#">立即抢购</a>
+            </div>
+          </li>
+          <li>
+            <img src="http://jscode.me/uploads/profile/726-profileimg.jpg" alt="">
+            <div class="tabName">奢华洛世奇水晶</div>
+            <div class="tabPrice">￥460.00</div>
+            <div class="cover">
+              <a href="#">立即抢购</a>
+            </div>
+          </li>
+          <li>
+            <img src="http://jscode.me/uploads/profile/726-profileimg.jpg" alt="">
+            <div class="tabName">奢华洛世奇水晶</div>
+            <div class="tabPrice">￥460.00</div>
+            <div class="cover">
+              <a href="#">立即抢购</a>
+            </div>
+          </li>
+          <li>
+            <img src="http://jscode.me/uploads/profile/726-profileimg.jpg" alt="">
+            <div class="tabName">奢华洛世奇水晶</div>
+            <div class="tabPrice">￥460.00</div>
+            <div class="cover">
+              <a href="#">立即抢购</a>
+            </div>
+          </li>
+        </ul>
+        <ul class="panel">
+          <li>
+            <img src="http://jscode.me/uploads/profile/726-profileimg.jpg" alt="">
+            <div class="tabName">奢华洛世奇水晶</div>
+            <div class="tabPrice">￥460.00</div>
+            <div class="cover">
+              <a href="#">立即抢购</a>
+            </div>
+          </li>
+          <li>
+            <img src="http://jscode.me/uploads/profile/726-profileimg.jpg" alt="">
+            <div class="tabName">奢华洛世奇水晶</div>
+            <div class="tabPrice">￥460.00</div>
+            <div class="cover">
+              <a href="#">立即抢购</a>
+            </div>
+          </li>
+          <li>
+            <img src="http://jscode.me/uploads/profile/726-profileimg.jpg" alt="">
+            <div class="tabName">奢华洛世奇水晶</div>
+            <div class="tabPrice">￥460.00</div>
+            <div class="cover">
+              <a href="#">立即抢购</a>
+            </div>
+          </li>
+          <li>
+            <img src="http://jscode.me/uploads/profile/726-profileimg.jpg" alt="">
+            <div class="tabName">奢华洛世奇水晶</div>
+            <div class="tabPrice">￥460.00</div>
+            <div class="cover">
+              <a href="#">立即抢购</a>
+            </div>
+          </li>
+          <li>
+            <img src="http://jscode.me/uploads/profile/726-profileimg.jpg" alt="">
+            <div class="tabName">奢华洛世奇水晶</div>
+            <div class="tabPrice">￥460.00</div>
+            <div class="cover">
+              <a href="#">立即抢购</a>
+            </div>
+          </li>
+          <li>
+            <img src="http://jscode.me/uploads/profile/726-profileimg.jpg" alt="">
+            <div class="tabName">奢华洛世奇水晶</div>
+            <div class="tabPrice">￥460.00</div>
+            <div class="cover">
+              <a href="#">立即抢购</a>
+            </div>
+          </li>
+        </ul>
+        <ul class="panel">
+          <li>
+            <img src="http://jscode.me/uploads/profile/726-profileimg.jpg" alt="">
+            <div class="tabName">奢华洛世奇水晶</div>
+            <div class="tabPrice">￥460.00</div>
+            <div class="cover">
+              <a href="#">立即抢购</a>
+            </div>
+          </li>
+          <li>
+            <img src="http://jscode.me/uploads/profile/726-profileimg.jpg" alt="">
+            <div class="tabName">奢华洛世奇水晶</div>
+            <div class="tabPrice">￥460.00</div>
+            <div class="cover">
+              <a href="#">立即抢购</a>
+            </div>
+          </li>
+          <li>
+            <img src="http://jscode.me/uploads/profile/726-profileimg.jpg" alt="">
+            <div class="tabName">奢华洛世奇水晶</div>
+            <div class="tabPrice">￥460.00</div>
+            <div class="cover">
+              <a href="#">立即抢购</a>
+            </div>
+          </li>
+          <li>
+            <img src="http://jscode.me/uploads/profile/726-profileimg.jpg" alt="">
+            <div class="tabName">奢华洛世奇水晶</div>
+            <div class="tabPrice">￥460.00</div>
+            <div class="cover">
+              <a href="#">立即抢购</a>
+            </div>
+          </li>
+          <li>
+            <img src="http://jscode.me/uploads/profile/726-profileimg.jpg" alt="">
+            <div class="tabName">奢华洛世奇水晶</div>
+            <div class="tabPrice">￥460.00</div>
+            <div class="cover">
+              <a href="#">立即抢购</a>
+            </div>
+          </li>
+          <li>
+            <img src="http://jscode.me/uploads/profile/726-profileimg.jpg" alt="">
+            <div class="tabName">奢华洛世奇水晶</div>
+            <div class="tabPrice">￥460.00</div>
+            <div class="cover">
+              <a href="#">立即抢购</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.js" charset="utf-8"></script>
+    <script type="text/javascript">
+      $('#bar li').on('click',function(){
+        var $target = $(this);
+        var $index = $target.index();
+        $target.siblings().removeClass('active');
+        $target.addClass('active');
+
+        $target.parents('.modType').find('.panel').removeClass('active');
+        $target.parents('.modType').find('.panel').eq($index).addClass('active');
+      })
+    </script>
   </body>
 </html>
